--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
          <div class="intro__blocks">
             <div class="intro__block">
                 <p>Позвоните нам:<a href="tel:+79119813517">+79119813517</a></p>
-            <p>Если не дозвонились мы обязательно перезвоним</p>
+            <span>Если не дозвонились мы обязательно перезвоним</span>
             </div>
             <div class="intro__block">
               <p>
                 Даты наших курсов</p>
-                <p>Следите за нашим расписанием.</p>
+                <span>Следите за нашим расписанием.</span>
             </div>
             <div class="intro__block">
                 <p>Наш адрес:</p>
-                <p>г.Санкт-Петербург, ул. Умных 22Н</p>
+                <span>г.Санкт-Петербург, ул. Умных 22Н</span>
             </div>
          </div>
       </div>
