создание блока main

--- a/index.html
+++ b/index.html
@@ -42,15 +42,34 @@
                 <p>Позвоните нам:<a href="tel:+79119813517">+79119813517</a></p>
             <span>Если не дозвонились мы обязательно перезвоним</span>
             </div>
-            <div class="intro__block">
+            <div class="intro__block intro__block-calendar">
               <p>
                 Даты наших курсов</p>
                 <span>Следите за нашим расписанием.</span>
             </div>
-            <div class="intro__block">
+            <div class="intro__block intro__block-location">
                 <p>Наш адрес:</p>
                 <span>г.Санкт-Петербург, ул. Умных 22Н</span>
             </div>
+         </div>
+         <div class="services container">
+          <h2>Услуги</h2>
+          <a href="#">Посмотреть все укслуги</a>
+          <div>
+            <div>
+              <img src="img/first-help.jpg" alt="Первая помощь">
+              <p>Первая помощь</p>
+            </div>
+            <div>
+              <img src="img/psih-pom.jpg" alt="Психологическая помощь">
+              <p>Психологическая помощь</p>
+            </div>
+            <div>
+              <img src="img/pom-vod.jpg" alt="Первая помощь на воде">
+              <p>Первая помощь на воде</p>
+            </div>
+          </div>
+
          </div>
       </div>
     </main>
