Создание вкладки Услуги

--- a/index.html
+++ b/index.html
@@ -32,45 +32,43 @@
     </header>
     <main>
       <div class="intro">
-         <div class="container">
-             <h1>Тактическая помощь пострадавшим в любых условиях.</h1>
-             <h2>Нам важен каждый человек.</h2>
-             <button>Подробнее</button>
-         </div>
-         <div class="intro__blocks">
-            <div class="intro__block">
-                <p>Позвоните нам:<a href="tel:+79119813517">+79119813517</a></p>
+        <div class="container">
+          <h1>Тактическая помощь пострадавшим в любых условиях.</h1>
+          <h2>Нам важен каждый человек.</h2>
+          <button>Подробнее</button>
+        </div>
+        <div class="intro__blocks">
+          <div class="intro__block">
+            <p>Позвоните нам:<a href="tel:+79119813517">+79119813517</a></p>
             <span>Если не дозвонились мы обязательно перезвоним</span>
-            </div>
-            <div class="intro__block intro__block-calendar">
-              <p>
-                Даты наших курсов</p>
-                <span>Следите за нашим расписанием.</span>
-            </div>
-            <div class="intro__block intro__block-location">
-                <p>Наш адрес:</p>
-                <span>г.Санкт-Петербург, ул. Умных 22Н</span>
-            </div>
-         </div>
-         <div class="services container">
+          </div>
+          <div class="intro__block intro__block-calendar">
+            <p>Даты наших курсов</p>
+            <span>Следите за нашим расписанием.</span>
+          </div>
+          <div class="intro__block intro__block-location">
+            <p>Наш адрес:</p>
+            <span>г.Санкт-Петербург, ул. Умных 22Н</span>
+          </div>
+        </div>
+        <div class="services container">
           <h2>Услуги</h2>
-          <a href="#">Посмотреть все укслуги</a>
-          <div>
-            <div>
-              <img src="img/first-help.jpg" alt="Первая помощь">
+          <a href="#">Посмотреть все услуги</a>
+          <div class="services__blocks">
+            <div class="services__block">
+              <img src="img/first-help.jpg" alt="Первая помощь" />
               <p>Первая помощь</p>
             </div>
-            <div>
-              <img src="img/psih-pom.jpg" alt="Психологическая помощь">
+            <div class="services__block">
+              <img src="img/psih-pom.jpg" alt="Психологическая помощь" />
               <p>Психологическая помощь</p>
             </div>
-            <div>
-              <img src="img/pom-vod.jpg" alt="Первая помощь на воде">
+            <div class="services__block">
+              <img src="img/pom-vod.jpg" alt="Первая помощь на воде" />
               <p>Первая помощь на воде</p>
             </div>
           </div>
-
-         </div>
+        </div>
       </div>
     </main>
   </body>
