--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
           <div class="services__blocks">
             <div class="services__block">
               <img src="img/first-help.jpg" alt="Первая помощь" />
+              <div class="overlay"></div>
               <p>Первая помощь</p>
             </div>
             <div class="services__block">
               <img src="img/psih-pom.jpg" alt="Психологическая помощь" />
+              <div class="overlay"></div>
               <p>Психологическая помощь</p>
             </div>
             <div class="services__block">
               <img src="img/pom-vod.jpg" alt="Первая помощь на воде" />
+              <div class="overlay"></div>
               <p>Первая помощь на воде</p>
             </div>
           </div>
