Добавлен блок наши достижения

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       </div>
       <nav class="nav">
         <ul>
-          <li class="nav__link_active">Главная</li>
-          <li>Услуги</li>
-          <li>О нас</li>
+          <li class="nav__link_active"><a href="#">Главная</a></li>
+          <li><a href="#uslugi">Услуги</a></li>
+          <li><a href="#about">О нас</a></li>
+          <li><a href="#principi">Наши принципы</a></li>
           <li>Контакты</li>
         </ul>
       </nav>
@@ -51,25 +52,66 @@
             <span>г.Санкт-Петербург, ул. Умных 22Н</span>
           </div>
         </div>
-        <div class="services container">
-          <h2>Услуги</h2>
-          <a href="#">Посмотреть все услуги</a>
-          <div class="services__blocks">
-            <div class="services__block">
-              <img src="img/first-help.jpg" alt="Первая помощь" />
-              <div class="overlay"></div>
-              <p>Первая помощь</p>
-            </div>
-            <div class="services__block">
-              <img src="img/psih-pom.jpg" alt="Психологическая помощь" />
-              <div class="overlay"></div>
-              <p>Психологическая помощь</p>
-            </div>
-            <div class="services__block">
-              <img src="img/pom-vod.jpg" alt="Первая помощь на воде" />
-              <div class="overlay"></div>
-              <p>Первая помощь на воде</p>
-            </div>
+      </div>
+      <div class="services container">
+        <h2 id="uslugi">Услуги</h2>
+        <a href="#">Посмотреть все услуги</a>
+        <div class="services__blocks">
+          <div class="services__block">
+            <img src="img/first-help.jpg" alt="Первая помощь" />
+            <div class="overlay"></div>
+            <p>Первая помощь</p>
+          </div>
+          <div class="services__block">
+            <img src="img/psih-pom.jpg" alt="Психологическая помощь" />
+            <div class="overlay"></div>
+            <p>Психологическая помощь</p>
+          </div>
+          <div class="services__block">
+            <img src="img/pom-vod.jpg" alt="Первая помощь на воде" />
+            <div class="overlay"></div>
+            <p>Первая помощь на воде</p>
+          </div>
+        </div>
+      </div>
+      <div class="about">
+        <div class="about__inner container">
+          <div class="about__info">
+            <h2 id="about">Кто мы такие и какие у нас ценности.</h2>
+            <p>
+              Мы частная военнная спастельная компания "Иеремия", занимаемся
+              всевозможной подготовкой и помощью по всему миру. Наша команда
+              основана на христианских ценностях, которые заповедал нам Иисус
+              Христос.
+            </p>
+            <a href="#">Подробнее наша группа в VK</a>
+          </div>
+          <div class="about__img">
+            <img src="/img/hero-sect-first.jpg" alt="spasenie" />
+          </div>
+        </div>
+      </div>
+      <div class="process container">
+        <h2 id="principi">Наши принципы</h2>
+        <p>Это то что нас заставляет служить</p>
+        <div class="process__blocks">
+          <div class="process_block">
+            <p>01. Каждый сотрудник профессионал</p>
+            <span
+              >Наши специалисты прошли обучения в различных сложностях и готовы
+              работать влюбое время.</span
+            >
+          </div>
+          <div class="process_block">
+            <p>02. Каждый сотрудник верит в Бога</p>
+            <span
+              >Мы молимся и ходим в церковь, так как мы дали обещание Богу, что
+              спасем не только тело, но и душу</span
+            >
+          </div>
+          <div class="process_block">
+            <p>03. Каждый сотрудник имеет полное оснащение.</p>
+            <span>Мы оснащаем наших братьев и сестер самым лучшим обмундированием и техникой и это благодаря поддержке нашим партнерам-церквам, которые молятся за нас и дают финансовую помощь.</span>
           </div>
         </div>
       </div>
