--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#uslugi">Услуги</a></li>
           <li><a href="#about">О нас</a></li>
           <li><a href="#principi">Наши принципы</a></li>
-          <li>Контакты</li>
+          <li><a href=#contacts>Контакты</a></li>
         </ul>
       </nav>
       <div class="header__lng">
@@ -79,9 +79,8 @@
           <div class="about__info">
             <h2 id="about">Кто мы такие и какие у нас ценности.</h2>
             <p>
-              Мы частная военнная спастельная компания "Иеремия", занимаемся
-              всевозможной подготовкой и помощью по всему миру. Наша команда
-              основана на христианских ценностях, которые заповедал нам Иисус
+              Мы частная военно-спасательная компания "Иеремия",  суть нашей работы заключается всевозможной подготовкой и спасением людей в экстремальных условиях в таких странах как Россия, Монголия, Китай, Белоруссия и Украина.<br> Наша команда
+              основана на христианских ценностях, которые заповедал  Иисус
               Христос.
             </p>
             <a href="#">Подробнее наша группа в VK</a>
@@ -98,8 +97,7 @@
           <div class="process_block">
             <p>01. Каждый сотрудник профессионал</p>
             <span
-              >Наши специалисты прошли обучения в различных сложностях и готовы
-              работать влюбое время.</span
+              >Сотрудники ЧВСК "Иеремия" прошли тяжелейшие курсы и практические занятие в полевых условиях. После этого гарантирована безупречная работа спасателей как в мирное, так и в военное время.</span
             >
           </div>
           <div class="process_block">
@@ -111,10 +109,71 @@
           </div>
           <div class="process_block">
             <p>03. Каждый сотрудник имеет полное оснащение.</p>
-            <span>Мы оснащаем наших братьев и сестер самым лучшим обмундированием и техникой и это благодаря поддержке нашим партнерам-церквам, которые молятся за нас и дают финансовую помощь.</span>
+            <span
+              >Мы оснащаем наших братьев и сестер самым лучшим обмундированием и
+              техникой и это благодаря поддержке нашим партнерам-церквам,
+              которые молятся за нас и дают финансовую помощь.</span
+            >
           </div>
         </div>
       </div>
+      <div class="contacts" id="contacts">
+        <div class="container">
+          <h2 class="contacts__title" id="contacts">Напишите нам:</h2>
+          <form class="contacts__form" action="">
+            <div class="form__row">
+              <div class="form__group">
+                <input type="text" class="input" placeholder=" " />
+                <label for="" class="label"> Имя </label>
+              </div>
+              <div class="form__group">
+                <input type="text" class="input" placeholder=" " />
+                <label for="" class="label"> Фамилия </label>
+              </div>
+            </div>
+            <div class="form__row">
+              <div class="form__group">
+                <input type="email" class="input" placeholder=" " />
+                <label for="" class="label"> Эл. почта </label>
+              </div>
+              <div class="form__group">
+                <input type="tel" class="input" placeholder=" " />
+                <label for="" class="label"> Телефон </label>
+              </div>
+            </div>
+            <div class="form__row">
+              <div class="form__group">
+                <textarea class="textarea" placeholder=" " name=""></textarea>
+                <label for="" class="label"> Сообщение </label>
+              </div>
+            </div>
+            <button class="btn text-upper" type="submit">Отправить</button>
+          </form>
+        </div>
+      </div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <p class="copyright">© 2024 ЧВСК "Иеремия"</p>
+          <div class="footer__soc">
+            <a href="#" class="footer__soc-link">
+              <img src="./img/vk.svg" alt="vk" />
+            </a>
+            <a href="#" class="footer__soc-link">
+              <img src="./img/telegram.svg" alt="telegram" />
+            </a>
+            <a
+              href="#"
+              target="_blank"
+              class="footer__soc-link"
+            >
+              <img src="./img/looky.svg" alt="" width="32px" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
