--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <h1>Тактическая помощь пострадавшим в любых условиях.</h1>
           <h2>Нам важен каждый человек.</h2>
           <button>Подробнее</button>
-        </div>
-        <div class="intro__blocks container">
-          <div class="intro__block">
+         </div>
+         <div class="intro__blocks ">
+          <div class="intro__block container">
             <p>Позвоните нам:<a href="tel:+79119813517">+79119813517</a></p>
             <span>Если не дозвонились мы обязательно перезвоним</span>
           </div>
